force-app/main/default/objects/Ticket__c/Ticket__c.object-meta.xml
<CustomObject>
    <label>Ticket</label>
    <pluralLabel>Tickets</pluralLabel>
    <nameField>
        <label>Ticket Number</label>
        <displayFormat>TKT-{0000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Ticket and complaint tracking for field visits (MOD-04 Outlet Visit Execution)</description>
</CustomObject>