force-app/main/default/objects/Ticket__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Outlet where the ticket was raised</description>
</CustomField>