force-app/main/default/objects/Ticket__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <label>Assigned To</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Tickets Assigned</relationshipLabel>
    <relationshipName>Tickets_Assigned</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User assigned to resolve this ticket</description>
</CustomField>