force-app/main/default/objects/Ticket__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Product Quality</fullName><default>false</default><label>Product Quality</label></value>
            <value><fullName>Delivery Issue</fullName><default>false</default><label>Delivery Issue</label></value>
            <value><fullName>Pricing Dispute</fullName><default>false</default><label>Pricing Dispute</label></value>
            <value><fullName>Service Request</fullName><default>false</default><label>Service Request</label></value>
            <value><fullName>Scheme Claim</fullName><default>false</default><label>Scheme Claim</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
    <description>Category of the ticket</description>
</CustomField>