force-app/main/default/objects/Ticket__c/fields/Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Photo_URL__c</fullName>
    <label>Photo URL</label>
    <type>Url</type>
    <description>URL to photo evidence for the ticket</description>
</CustomField>