force-app/main/default/objects/Ticket__c/fields/Reported_By__c.field-meta.xml
<CustomField>
    <fullName>Reported_By__c</fullName>
    <label>Reported By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Tickets Reported</relationshipLabel>
    <relationshipName>Tickets_Reported</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who reported the ticket</description>
</CustomField>