force-app/main/default/objects/Ticket__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <label>Resolution</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Resolution details for the ticket</description>
</CustomField>