force-app/main/default/objects/Ticket__c/fields/Resolved_Date__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Date__c</fullName>
    <label>Resolved Date</label>
    <type>DateTime</type>
    <description>Date and time when the ticket was resolved</description>
</CustomField>