force-app/main/default/objects/Ticket__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <type>Text</type>
    <length>255</length>
    <description>Brief subject of the ticket</description>
</CustomField>