force-app/main/default/objects/Ticket__c/fields/Ticket_Date__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Date__c</fullName>
    <label>Ticket Date</label>
    <type>Date</type>
    <description>Date when the ticket was raised</description>
</CustomField>