force-app/main/default/objects/Ticket__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <label>Visit</label>
    <type>Lookup</type>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Visit during which this ticket was created</description>
</CustomField>